finished NYC Tables list

--- a/maps2.html
+++ b/maps2.html
@@ -227,6 +227,146 @@
   <li class="mdl-menu__item"><a href="http://www.perlanyc.com" target="_blank">Perla</a></li>
   <li class="mdl-menu__item"><a href="hhttp://rosemarysnyc.com" target="_blank">Rosemary's</a></li>
   </ul>
+  </div>
+
+<div class="mdl-cell mdl-cell--3-col">
+    <button id="menu7"
+        class="mdl-button mdl-js-button mdl-js-ripple-effect">
+  NYC Nolita
+    </button>
+<ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
+    for="menu7">
+  <li class="mdl-menu__item"><a href="http://balaboostanyc.com" target="_blank">Balaboosta</a></li>
+  <li class="mdl-menu__item"><a href="http://www.blackseedbagels.com"target="_blank">Black Seed Bagels</a></li>
+  <li class="mdl-menu__item"><a href="http://thebutchersdaughter.com"target="_blank">The Butcher's Daughter</a></li>
+  <li class="mdl-menu__item"><a href="http://www.cafehabana.com" target="_blank">Cafe Habana</a></li>
+  <li class="mdl-menu__item"><a href="http://www.cafeselectnyc.com" target="_blank">Cafe Select</a></li>
+  <li class="mdl-menu__item"><a href="http://www.jeffreysgrocery.com" target="_blank">Jeffrey's Grocery</a></li>
+  <li class="mdl-menu__item"><a href="http://www.estelanyc.com" target="_blank">Estela</a></li>
+  <li class="mdl-menu__item"><a href="http://jackswifefreda.com" target="_blank">Jack's Wife Freda</a></li>
+  <li class="mdl-menu__item"><a href="http://www.osteriamorini.com" target="_blank">Osteria Morini</a></li>
+  <li class="mdl-menu__item"><a href="http://www.morandiny.com" target="_blank">Morandi</a></li>
+  <li class="mdl-menu__item"><a href="http://www.peasantnyc.com" target="_blank">Peasant</a></li>
+  <li class="mdl-menu__item"><a href="http://www.rubirosanyc.com" target="_blank">Rubirosa Ristorante</a></li>
+  </ul>
+  </div>
+
+<div class="mdl-cell mdl-cell--3-col">
+    <button id="menu8"
+        class="mdl-button mdl-js-button mdl-js-ripple-effect">
+  NYC Noho
+    </button>
+<ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
+    for="menu8">
+  <li class="mdl-menu__item"><a href="http://acmenyc.com" target="_blank">Acme</a></li>
+  <li class="mdl-menu__item"><a href="http://bondstrestaurant.com"target="_blank">BondST</a></li>
+  <li class="mdl-menu__item"><a href="http://gatonyc.com"target="_blank">Gato</a></li>
+  <li class="mdl-menu__item"><a href="http://www.theboweryhotel.com/dining.php" target="_blank">Gemma</a></li>
+  <li class="mdl-menu__item"><a href="http://www.hechoendumbo.com" target="_blank">Hecho En Dumbo</a></li>
+  <li class="mdl-menu__item"><a href="http://www.ilbuco.com" target="_blank">Il Buco</a></li>
+  <li class="mdl-menu__item"><a href="http://www.ilbucovineria.com" target="_blank">il Buco Alimentari & Vineria</a></li>
+  <li class="mdl-menu__item"><a href="http://www.ippudony.com" target="_blank">Ippudo</a></li>
+  <li class="mdl-menu__item"><a href="http://www.lapicio.com" target="_blank">L'Apicio</a></li>
+  <li class="mdl-menu__item"><a href="http://www.mileenddeli.com" target="_blank">Mile End</a></li>
+  <li class="mdl-menu__item"><a href="http://milkandhops.com" target="_blank">Milk & Hops</a></li>
+  <li class="mdl-menu__item"><a href="http://www.saxonandparole.com" target="_blank">Saxon + Parole</a></li>
+  <li class="mdl-menu__item"><a href="http://www.thesmilenyc.com" target="_blank">The Smile</a></li>
+  <li class="mdl-menu__item"><a href="http://sundaescones.com" target="_blank">Sundaes and Cones</a></li>
+  </ul>
+  </div>
+
+<div class="mdl-cell mdl-cell--3-col">
+    <button id="menu9"
+        class="mdl-button mdl-js-button mdl-js-ripple-effect">
+  NYC Soho
+    </button>
+<ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
+    for="menu9">
+  <li class="mdl-menu__item"><a href="http://backfortynyc.com" target="_blank">Back Forty West</a></li>
+  <li class="mdl-menu__item"><a href="http://www.balthazarny.com"target="_blank">Balthazar</a></li>
+  <li class="mdl-menu__item"><a href="http://www.blueribbonrestaurants.com/restaurants/blue-ribbon-brasserie"target="_blank">Blue Ribbon Brasserie</a></li>
+  <li class="mdl-menu__item"><a href="http://www.blueribbonrestaurants.com/restaurants/blue-ribbon-sushi-original" target="_blank">Blue Ribbon Sushi</a></li>
+  <li class="mdl-menu__item"><a href="http://chalkpointkitchen.com" target="_blank">Chalk Point Kitchen</a></li>
+  <li class="mdl-menu__item"><a href="http://www.charliebirdnyc.com" target="_blank">Charlie Bird</a></li>
+  <li class="mdl-menu__item"><a href="http://www.davidburkekitchen.com" target="_blank">David Burke Kitchen</a></li>
+  <li class="mdl-menu__item"><a href="http://dominiqueansel.com" target="_blank">Dominique Ansel Bakery</a></li>
+  <li class="mdl-menu__item"><a href="http://www.thedutchnyc.com" target="_blank">The Dutch</a></li>
+  <li class="mdl-menu__item"><a href="http://hundredacresnyc.com" target="_blank">Hundred Acres</a></li>
+  <li class="mdl-menu__item"><a href="http://www.esquinanyc.com" target="_blank">La Esquina Corner Deli</a></li>
+  <li class="mdl-menu__item"><a href="https://www.laduree.com/en_int" target="_blank">Ladurée</a></li>
+  <li class="mdl-menu__item"><a href="http://www.themercerkitchen.com" target="_blank">The Mercer Kitchen</a></li>
+  <li class="mdl-menu__item"><a href="http://www.parmnyc.com/location/mulberry-street" target="_blank">Parm</a></li>
+  </ul>
+  </div>
+
+<div class="mdl-cell mdl-cell--3-col">
+    <button id="menu10"
+        class="mdl-button mdl-js-button mdl-js-ripple-effect">
+  NYC Tribeca
+    </button>
+<ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
+    for="menu10">
+  <li class="mdl-menu__item"><a href="http://www.grandaisybakery.com" target="_blank">Grandaisy Bakery</a></li>
+  <li class="mdl-menu__item"><a href="http://www.grandbanks.org"target="_blank">Grand Banks</a></li>
+  <li class="mdl-menu__item"><a href="http://www.locandaverdenyc.com"target="_blank">Locanda Verde</a></li>
+  <li class="mdl-menu__item"><a href="hhttp://www.theodeonrestaurant.com" target="_blank">The Odeon</a></li>
+  <li class="mdl-menu__item"><a href="http://www.puffystavern.nyc" target="_blank">Puffy’s Tavern</a></li>
+  <li class="mdl-menu__item"><a href="http://walkerstribeca.com" target="_blank">Walker's</a></li>
+  </ul>
+  </div>
+
+<div class="mdl-cell mdl-cell--3-col">
+    <button id="menu11"
+        class="mdl-button mdl-js-button mdl-js-ripple-effect">
+  NYC LES
+    </button>
+<ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
+    for="menu11">
+  <li class="mdl-menu__item"><a href="http://beautyandessex.com" target="_blank">Beauty & Essex</a></li>
+  <li class="mdl-menu__item"><a href="hhttp://www.dirtcandynyc.com"target="_blank">Dirtcandy</a></li>
+  <li class="mdl-menu__item"><a href="http://www.dirtyfrench.com"target="_blank">Dirty French</a></li>
+  <li class="mdl-menu__item"><a href="http://www.freemansrestaurant.com" target="_blank">Freemans</a></li>
+  <li class="mdl-menu__item"><a href="http://katzsdelicatessen.com" target="_blank">Katz's Delicatessen</a></li>
+  <li class="mdl-menu__item"><a href="http://www.theleadbellynyc.com/" target="_blank">The Leadbelly</a></li>
+  <li class="mdl-menu__item"><a href="http://www.themeatballshop.com" target="_blank">The Meatball Shop</a></li>
+  <li class="mdl-menu__item"><a href="http://www.russanddaughterscafe.com" target="_blank">Russ & Daughters Cafe</a></li>
+  <li class="mdl-menu__item"><a href="http://www.saucerestaurant.com" target="_blank">Sauce</a></li>
+  <li class="mdl-menu__item"><a href="http://nymag.com/listings/restaurant/tinys-giant-sandwich-shop/menus/main.html" target="_blank">Tiny's Giant Sandwich Shop</a></li>
+  </ul>
+  </div>
+
+<div class="mdl-cell mdl-cell--3-col">
+    <button id="menu12"
+        class="mdl-button mdl-js-button mdl-js-ripple-effect">
+  NYC East Village
+    </button>
+
+<ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
+    for="menu12">
+  <li class="mdl-menu__item"><a href="http://www.baohausnyc.com" target="_blank">Baohaus</a></li>
+  <li class="mdl-menu__item"><a href="http://nymag.com/listings/restaurant/the-black-ant"target="_blank">Black Ant</a></li>
+  <li class="mdl-menu__item"><a href="http://blueribbonfriedchicken.com"target="_blank">Blue Ribbon Fried Chicken</a></li>
+  <li class="mdl-menu__item"><a href="http://www.cafemogador.com" target="_blank">Cafe Mogador</a></li>
+  <li class="mdl-menu__item"><a href="http://www.cafeorlin.com" target="_blank">Cafe Orlin</a></li>
+  <li class="mdl-menu__item"><a href="http://www.chikalicious.com" target="_blank">ChikaLicious Dessert Bar</a></li>
+  <li class="mdl-menu__item"><a href="http://www.frankrestaurant.com/2015" target="_blank">Frank</a></li>
+  <li class="mdl-menu__item"><a href="http://www.graffitinyc.com" target="_blank">graffiti</a></li>
+  <li class="mdl-menu__item"><a href="http://haveliny.com" target="_blank">Haveli Banjara Indian Restaurant</a></li>
+  <li class="mdl-menu__item"><a href="http://www.jewelbakosushi.com" target="_blank">Jewel Bako</a></li>
+  <li class="mdl-menu__item"><a href="http://www.lilfrankies.com/2015" target="_blank">Lil' Frankie's</a></li>
+  <li class="mdl-menu__item"><a href="http://www.themermaidnyc.com" target="_blank">The Mermaid Inn</a></li>
+  <li class="mdl-menu__item"><a href="http://www.frankiesspuntino.com/570/570_menu.html" target="_blank">Mighty Quinn's Barbeque</a></li>
+  <li class="mdl-menu__item"><a href="http://www.mightyquinnsbbq.com/" target="_blank">Mighty Quinn's BBQ</a></li>
+  <li class="mdl-menu__item"><a href="http://www.moishesbakeshop.com/" target="_blank">Moishe's Bake Shop</a></li>
+  <li class="mdl-menu__item"><a href="https://ssambar.momofuku.com" target="_blank">Momofuku Ssäm Bar</a></li>
+  <li class="mdl-menu__item"><a href="http://www.timeout.com/newyork/bars/little-branch" target="_blank">Little Branch</a></li>
+  <li class="mdl-menu__item"><a href="http://www.northernspyfoodco.com" target="_blank">Northern Spy Food Co.</a></li>
+  <li class="mdl-menu__item"><a href="http://prunerestaurant.com" target="_blank">Prune</a></li>
+  <li class="mdl-menu__item"><a href="http://sanmarzanonyc.com" target="_blank">San Marzano</a></li>
+    <li class="mdl-menu__item"><a href="http://www.standardhotels.com/new-york/features/cafe-standard" target="_blank">The Standard, East Village</a></li>
+</ul>
+</div>
+
 </div>
 </main>
 
