updated fonts, logo, tables menu list

--- a/maps.html
+++ b/maps.html
@@ -6,7 +6,7 @@
     <title >DanaAtTheTable</title>
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.grey-indigo.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href='https://fonts.googleapis.com/css?family=Josefin+Slab' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Slab|Raleway' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='styles/main.css'>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <style type="text/css">
@@ -19,7 +19,7 @@
     <!-- No header, and the drawer stays open on larger screens (fixed drawer). -->
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
       <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title--logo"><a href="index.html"><img src="images/logo.png"></a></span>
+        <span class="mdl-layout-title--logo"><a href="index.html"><img src="images/Logo_masterGrey.png" style="width:240px"></a></span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link fontchange fontchange--nav" href="portfolioI.html">PORTFOLIO I</a>
           <a class="mdl-navigation__link fontchange fontchange--nav" href="portfolioII.html">PORTFOLIO II</a>
