--- a/maps2.html
+++ b/maps2.html
@@ -19,7 +19,7 @@
     <!-- No header, and the drawer stays open on larger screens (fixed drawer). -->
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
       <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title--logo"><a href="index.html"><img src="images/logo.png"></a></span>
+        <span class="mdl-layout-title--logo"><a href="index.html"><img src="images/Logo_masterGrey.png" style="width:240px"></a></span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link fontchange fontchange--nav" href="portfolioI.html">PORTFOLIO I</a>
           <a class="mdl-navigation__link fontchange fontchange--nav" href="portfolioII.html">PORTFOLIO II</a>
@@ -69,6 +69,12 @@
             font-family: 'Raleway', sans-serif;
             color: #686868;
           }
+
+          .mdl-menu {
+            overflow: scroll;
+            height: 700px;
+          }
+
           </style>
 <!--<main class="mdl-layout__content" style="height: 100vh; width: 100vw;"--> 
 <div class="mdl-grid">
