--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.grey-indigo.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Slab' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans|Questrial|IM+Fell+French+Canon:400italic|Source+Sans+Pro' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans|Questrial|Raleway|IM+Fell+French+Canon:400italic|Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='styles/main.css'>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     </head>
@@ -16,13 +16,13 @@
     <!-- No header, and the drawer stays open on larger screens (fixed drawer). -->
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
       <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title--logo"><a href="index.html"><img src="images/logo.png"></a></span>
+        <span class="mdl-layout-title--logo"><a href="index.html"><img src="images/Logo_masterGrey.png" style="width:240px"></a></span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link fontchange fontchange--nav" href="portfolioI.html">PORTFOLIO I</a>
-          <a class="mdl-navigation__link fontchange fontchange--nav" href="portfolioII.html">PORTFOLIO II</a>
-          <a class="mdl-navigation__link fontchange fontchange--nav" href="savoir-faire.html">SAVOIRE-FAIRE</a>
-          <a class="mdl-navigation__link fontchange fontchange--nav" href="maps.html">TABLES</a>
-          <a class="mdl-navigation__link fontchange fontchange--nav" href="contact.html">CONNECT</a>
+          <a class="mdl-navigation__link fontchange fontchange--nav" href="portfolioI.html">portfolio</a>
+          <a class="mdl-navigation__link fontchange fontchange--nav" href="portfolioII.html">reel</a>
+          <a class="mdl-navigation__link fontchange fontchange--nav" href="savoir-faire.html">about</a>
+          <a class="mdl-navigation__link fontchange fontchange--nav" href="maps.html">tables</a>
+          <a class="mdl-navigation__link fontchange fontchange--nav" href="contact.html">connect</a>
          
           <div class="container social-badge">
           
