updated cdn version

--- a/maps2.html
+++ b/maps2.html
@@ -76,7 +76,8 @@
           }
 
           </style>
-<!--<main class="mdl-layout__content" style="height: 100vh; width: 100vw;"--> 
+<!--<main class="mdl-layout__content" style="height: 100vh; width: 100vw;"  FOR SCROLLING:overflow-y: auto;
+            overflow-x: hidden;--> 
 <div class="mdl-grid">
   
   <div class="mdl-cell mdl-cell--3-col">
